[package]
name = "webhook-listener"
version = "0.1.0"
edition = "2021"
authors = ["Midka <me@midka.dev>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
actix-governor = "0.4.0"
actix-web = "4"
env_logger = "0.10.0"
serde = "1.0.160"
serde_derive = "1.0.160"
time = "0.3.33"
toml = "0.7.3"
